--- a/ui.html
+++ b/ui.html
@@ -1,17 +1,34 @@
-<h2>Rectangle Creator</h2>
-<p>Count: <input id="count" value="5"></p>
+<h1>Style Magic</h1>
+<input type="checkbox" id="color" name="color" />
+<label for="color">Color</label>
+<input type="checkbox" id="typo" name="typo" />
+<label for="typo">Typo</label>
+<br /><br /><br />
 <button id="create">Create</button>
 <button id="cancel">Cancel</button>
+
+<style>
+  * {
+    font-family: "Inter", sans-serif;
+  }
+
+  h1 {
+    font-size: 18px;
+  }
+</style>
 <script>
+  document.getElementById("create").onclick = () => {
+    const styleCategory = {
+      color: document.getElementById("color").checked,
+      typo: document.getElementById("typo").checked,
+    };
+    parent.postMessage(
+      { pluginMessage: { type: "apply-styles", styleCategory } },
+      "*"
+    );
+  };
 
-document.getElementById('create').onclick = () => {
-  const textbox = document.getElementById('count');
-  const count = parseInt(textbox.value, 10);
-  parent.postMessage({ pluginMessage: { type: 'create-rectangles', count } }, '*')
-}
-
-document.getElementById('cancel').onclick = () => {
-  parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
-}
-
+  document.getElementById("cancel").onclick = () => {
+    parent.postMessage({ pluginMessage: { type: "cancel" } }, "*");
+  };
 </script>
