--- a/ui.html
+++ b/ui.html
@@ -1,26 +1,93 @@
-<h1>Style Magic</h1>
-<input type="checkbox" id="color" name="color" />
-<label for="color">Color</label>
-<input type="checkbox" id="typo" name="typo" />
-<label for="typo">Typo</label>
-<br /><br /><br />
-<button id="create">Create</button>
-<button id="cancel">Cancel</button>
-
 <style>
   * {
     font-family: "Inter", sans-serif;
   }
 
-  h1 {
-    font-size: 18px;
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  label,
+  button,
+  p,
+  a {
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 16px;
+    text-decoration: none;
+  }
+
+  a {
+    color: #18a0fb;
+  }
+
+  p {
+    margin-bottom: 8px;
+  }
+
+  button {
+    min-width: 64px;
+    height: 30px;
+    padding: 7px 12px;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+
+  button.primary {
+    color: #fff;
+    background-color: #18a0fb;
+    border-color: #18a0fb;
+  }
+  button.secondary {
+    color: rgba(0, 0, 0, 0.8);
+    background-color: #fff;
+    border-color: rgba(0, 0, 0, 0.8);
+  }
+
+  .flex {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+  }
+
+  .button-group {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    column-gap: 8px;
+    margin-top: 64px;
+    margin-bottom: 8px;
+  }
+
+  input[type="checkbox"] {
+    margin-left: 0;
   }
 </style>
+<p>Match sRGB properties of solid colors:</p>
+<label for="color" class="flex">
+  <input id="color" type="checkbox" name="color" checked />
+  Color
+</label>
+<!-- <label for="typo" class="flex">
+  <input id="typo" type="checkbox" name="typo" />
+  Typo
+</label> -->
+<div class="button-group">
+  <button id="cancel">Cancel</button>
+  <button id="create" class="primary">Apply</button>
+</div>
+<a href="https://www.github.com/maximedaraize/style-sync"
+  >Open a issue on Github</a
+>
+
 <script>
   document.getElementById("create").onclick = () => {
     const styleCategory = {
       color: document.getElementById("color").checked,
-      typo: document.getElementById("typo").checked,
+      // typo: document.getElementById("typo").checked,
     };
     parent.postMessage(
       { pluginMessage: { type: "apply-styles", styleCategory } },
