fix: add target blank to link in ui plugin

--- a/src/ui.html
+++ b/src/ui.html
@@ -74,8 +74,12 @@
 </div>
 <footer>
   <p id="version">v1.0.0</p>
-  <a href="https://www.github.com/maximedaraize/style-sync"
-    >Open a issue on Github</a
+  <a
+    href="https://www.github.com/maximedaraize/style-sync"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    Open a issue on Github</a
   >
 </footer>
 <script>
